--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Valera bootstrap 3 one page template</title>
+    <title>Kosta151 4조 github 연습용 Page</title>
 	
     <!-- css -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -21,13 +21,6 @@
     <link href="css/style.css" rel="stylesheet">
 	<link href="color/default.css" rel="stylesheet">
     
-    <!-- =======================================================
-        Theme Name: Valera
-        Theme URL: https://bootstrapmade.com/valera-free-bootstrap-theme/
-        Author: BootstrapMade
-        Author URL: https://bootstrapmade.com
-    ======================================================= -->
-
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
@@ -64,16 +57,16 @@
 		<div class="home-video-wrapper">
 
 		<div class="homevideo-container">
-           <div id="P1" class="bg-player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'https://www.youtube.com/watch?v=mroiVdC7H10',containment:'.homevideo-container', quality: 'hd720', showControls: false, autoPlay:true, mute:true, startAt:0, opacity:1}"></div>
+           <div id="P1" class="bg-player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'https://www.youtube.com/watch?v=FJUH8dByh9k',containment:'.homevideo-container', quality: 'hd720', showControls: false, autoPlay:true, mute:true, startAt:0, opacity:1}"></div>
 		</div>
 		<div class="overlay">
 			<div class="text-center video-caption">
 				<div class="wow bounceInDown" data-wow-offset="0" data-wow-delay="0.8s">
-					<h1 class="big-heading font-light"><span id="js-rotating">We are valera, Awesome Bootstrap theme, Get better appearance, Craft from pixel </span></h1>
+					<h1 class="big-heading font-light"><span id="js-rotating">내이름은 창균 까불지 말아라 </span></h1>
 				</div>
 				<div class="wow bounceInUp" data-wow-offset="0" data-wow-delay="1s">
 					<div class="margintop-30">
-						<a href="#about" class="btn btn-skin" id="btn-scroll">Start here</a>
+						<a href="#about" class="btn btn-skin" id="btn-scroll">네 안까불겠습니다</a>
 					</div>
 				</div>
 			</div>
